Make return value of function a dict instead of 6-element tuple
Signed-off-by: Benjamin Maier <Benjamin.Maier2@de.bosch.com>

--- a/demos/fkm_nonlinear/fkm_nonlinear.ipynb
+++ b/demos/fkm_nonlinear/fkm_nonlinear.ipynb
@@ -397,14 +397,25 @@
     "\n",
     "# plot resulting stress-strain curve\n",
     "sampling_parameter = 50    # choose larger for smoother plot\n",
-    "strain_values_primary, stress_values_primary, hysteresis_index_primary, \\\n",
-    "strain_values_secondary, stress_values_secondary, hysteresis_index_secondary \\\n",
-    "    = detector.interpolated_stress_strain_data(sampling_parameter)\n",
+    "plotting_data = detector.interpolated_stress_strain_data(sampling_parameter)\n",
+    "\n",
+    "strain_values_primary = plotting_data[\"strain_values_primary\"]\n",
+    "stress_values_primary = plotting_data[\"stress_values_primary\"]\n",
+    "hysteresis_index_primary = plotting_data[\"hysteresis_index_primary\"]\n",
+    "strain_values_secondary = plotting_data[\"strain_values_secondary\"]\n",
+    "stress_values_secondary = plotting_data[\"stress_values_secondary\"]\n",
+    "hysteresis_index_secondary = plotting_data[\"hysteresis_index_secondary\"]\n",
     "\n",
     "sampling_parameter = 50    # choose larger for smoother plot\n",
-    "strain_values_primary_1st, stress_values_primary_1st, hysteresis_index_primary_1st, \\\n",
-    "strain_values_secondary_1st, stress_values_secondary_1st, hysteresis_index_secondary_1st \\\n",
-    "    = detector_1st.interpolated_stress_strain_data(sampling_parameter)\n",
+    "plotting_data_1st = detector_1st.interpolated_stress_strain_data(sampling_parameter)\n",
+    "\n",
+    "strain_values_primary_1st = plotting_data_1st[\"strain_values_primary\"]\n",
+    "stress_values_primary_1st = plotting_data_1st[\"stress_values_primary\"]\n",
+    "hysteresis_index_primary_1st = plotting_data_1st[\"hysteresis_index_primary\"]\n",
+    "strain_values_secondary_1st = plotting_data_1st[\"strain_values_secondary\"]\n",
+    "stress_values_secondary_1st = plotting_data_1st[\"stress_values_secondary\"]\n",
+    "hysteresis_index_secondary_1st = plotting_data_1st[\"hysteresis_index_secondary\"]\n",
+    "\n",
     "\n",
     "# stress-strain diagram\n",
     "axes[1,0].plot(strain_values_primary, stress_values_primary, \"y-\", lw=2, label=\"HCM second run\")\n",
@@ -430,14 +441,24 @@
     "\n",
     "# plot resulting stress-strain curve\n",
     "sampling_parameter = 50    # choose larger for smoother plot\n",
-    "strain_values_primary, stress_values_primary, hysteresis_index_primary, \\\n",
-    "strain_values_secondary, stress_values_secondary, hysteresis_index_secondary \\\n",
-    "    = detector.interpolated_stress_strain_data(sampling_parameter)\n",
+    "plotting_data = detector.interpolated_stress_strain_data(sampling_parameter)\n",
+    "\n",
+    "strain_values_primary = plotting_data[\"strain_values_primary\"]\n",
+    "stress_values_primary = plotting_data[\"stress_values_primary\"]\n",
+    "hysteresis_index_primary = plotting_data[\"hysteresis_index_primary\"]\n",
+    "strain_values_secondary = plotting_data[\"strain_values_secondary\"]\n",
+    "stress_values_secondary = plotting_data[\"stress_values_secondary\"]\n",
+    "hysteresis_index_secondary = plotting_data[\"hysteresis_index_secondary\"]\n",
     "\n",
     "sampling_parameter = 50    # choose larger for smoother plot\n",
-    "strain_values_primary_1st, stress_values_primary_1st, hysteresis_index_primary_1st, \\\n",
-    "strain_values_secondary_1st, stress_values_secondary_1st, hysteresis_index_secondary_1st \\\n",
-    "    = detector_1st.interpolated_stress_strain_data(sampling_parameter)\n",
+    "plotting_data_1st = detector_1st.interpolated_stress_strain_data(sampling_parameter)\n",
+    "\n",
+    "strain_values_primary_1st = plotting_data_1st[\"strain_values_primary\"]\n",
+    "stress_values_primary_1st = plotting_data_1st[\"stress_values_primary\"]\n",
+    "hysteresis_index_primary_1st = plotting_data_1st[\"hysteresis_index_primary\"]\n",
+    "strain_values_secondary_1st = plotting_data_1st[\"strain_values_secondary\"]\n",
+    "stress_values_secondary_1st = plotting_data_1st[\"stress_values_secondary\"]\n",
+    "hysteresis_index_secondary_1st = plotting_data_1st[\"hysteresis_index_secondary\"]\n",
     "\n",
     "# stress-strain diagram\n",
     "axes[1,1].plot(strain_values_primary, stress_values_primary, \"y-\", lw=2, label=\"HCM second run\")\n",
