--- a/demos/fkm_nonlinear/fkm_nonlinear_full.ipynb
+++ b/demos/fkm_nonlinear/fkm_nonlinear_full.ipynb
@@ -589,9 +589,15 @@
    "source": [
     "# plot resulting stress-strain curve\n",
     "sampling_parameter = 50    # choose larger for smoother plot\n",
-    "strain_values_primary, stress_values_primary, hysteresis_index_primary, \\\n",
-    "strain_values_secondary, stress_values_secondary, hysteresis_index_secondary \\\n",
-    "    = detector_1st.interpolated_stress_strain_data(sampling_parameter)\n",
+    "plotting_data = detector_1st.interpolated_stress_strain_data(sampling_parameter)\n",
+    "\n",
+    "strain_values_primary = plotting_data[\"strain_values_primary\"]\n",
+    "stress_values_primary = plotting_data[\"stress_values_primary\"]\n",
+    "hysteresis_index_primary = plotting_data[\"hysteresis_index_primary\"]\n",
+    "strain_values_secondary = plotting_data[\"strain_values_secondary\"]\n",
+    "stress_values_secondary = plotting_data[\"stress_values_secondary\"]\n",
+    "hysteresis_index_secondary = plotting_data[\"hysteresis_index_secondary\"]\n",
+    "\n",
     "\n",
     "fig, axes = plt.subplots(1, 2, figsize=(12,6))\n",
     "plt.subplots_adjust(wspace=0.4, \n",
@@ -836,9 +842,14 @@
    "source": [
     "# plot resulting stress-strain curve\n",
     "sampling_parameter = 50    # choose larger for smoother plot\n",
-    "strain_values_primary, stress_values_primary, hysteresis_index_primary, \\\n",
-    "strain_values_secondary, stress_values_secondary, hysteresis_index_secondary \\\n",
-    "    = detector.interpolated_stress_strain_data(sampling_parameter)\n",
+    "plotting_data = detector.interpolated_stress_strain_data(sampling_parameter)\n",
+    "\n",
+    "strain_values_primary = plotting_data[\"strain_values_primary\"]\n",
+    "stress_values_primary = plotting_data[\"stress_values_primary\"]\n",
+    "hysteresis_index_primary = plotting_data[\"hysteresis_index_primary\"]\n",
+    "strain_values_secondary = plotting_data[\"strain_values_secondary\"]\n",
+    "stress_values_secondary = plotting_data[\"stress_values_secondary\"]\n",
+    "hysteresis_index_secondary = plotting_data[\"hysteresis_index_secondary\"]\n",
     "\n",
     "# all hystereses in stress-strain diagram\n",
     "fig, axes = plt.subplots(1, 2, figsize=(18,6))\n",
@@ -901,9 +912,14 @@
     "# plot all hystereses\n",
     "# get all graph data\n",
     "sampling_parameter = 50    # choose larger for smoother plot\n",
-    "strain_values_primary_all, stress_values_primary_all, hysteresis_index_primary, \\\n",
-    "strain_values_secondary_all, stress_values_secondary_all, hysteresis_index_secondary \\\n",
-    "    = detector.interpolated_stress_strain_data(sampling_parameter, only_hystereses=False)\n",
+    "plotting_data = detector.interpolated_stress_strain_data(sampling_parameter, only_hystereses=False)\n",
+    "\n",
+    "strain_values_primary = plotting_data[\"strain_values_primary\"]\n",
+    "stress_values_primary = plotting_data[\"stress_values_primary\"]\n",
+    "hysteresis_index_primary = plotting_data[\"hysteresis_index_primary\"]\n",
+    "strain_values_secondary = plotting_data[\"strain_values_secondary\"]\n",
+    "stress_values_secondary = plotting_data[\"stress_values_secondary\"]\n",
+    "hysteresis_index_secondary = plotting_data[\"hysteresis_index_secondary\"]\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(12,6))\n",
     "ax.plot(strain_values_primary, stress_values_primary, \"b-\", lw=2)\n",
