fix plotting in fkm_nonlinear_full
Signed-off-by: Benjamin Maier <Benjamin.Maier2@de.bosch.com>

--- a/demos/fkm_nonlinear/fkm_nonlinear_full.ipynb
+++ b/demos/fkm_nonlinear/fkm_nonlinear_full.ipynb
@@ -934,9 +934,14 @@
     "\n",
     "# get graph data of only hystereses\n",
     "sampling_parameter = 50    # choose larger for smoother plot\n",
-    "strain_values_primary, stress_values_primary, hysteresis_index_primary, \\\n",
-    "strain_values_secondary, stress_values_secondary, hysteresis_index_secondary \\\n",
-    "    = detector.interpolated_stress_strain_data(sampling_parameter, only_hystereses=True)\n",
+    "plotting_data = detector.interpolated_stress_strain_data(sampling_parameter, only_hystereses=True)\n",
+    "\n",
+    "strain_values_primary = plotting_data[\"strain_values_primary\"]\n",
+    "stress_values_primary = plotting_data[\"stress_values_primary\"]\n",
+    "hysteresis_index_primary = plotting_data[\"hysteresis_index_primary\"]\n",
+    "strain_values_secondary = plotting_data[\"strain_values_secondary\"]\n",
+    "stress_values_secondary = plotting_data[\"stress_values_secondary\"]\n",
+    "hysteresis_index_secondary = plotting_data[\"hysteresis_index_secondary\"]\n",
     "\n",
     "# plot only hystereses\n",
     "strain_previous = []\n",
