Fix formatting issues in documentation
Signed-off-by: Benjamin Maier <benjamin.maier2@de.bosch.com>

--- a/demos/fkm_nonlinear/fkm_nonlinear.ipynb
+++ b/demos/fkm_nonlinear/fkm_nonlinear.ipynb
@@ -5,8 +5,8 @@
    "id": "0d2b68d8",
    "metadata": {},
    "source": [
-    "# FKM nonlinear assessment for a single point\n",
-    "This jupyter notebook is the main example how to apply the FKM nonlinear, i.e., the local strain concept using pylife.\n",
+    "# FKM Nonlinear demo\n",
+    "This jupyter notebook is the main example how to apply the FKM nonlinear, i.e., the local strain concept using pylife. The fatigue assessment is performed for a single point. Note that assessment for a mesh is also possible with pylife, by providing the respective meshes.\n",
     "If you have voilà installed (``pip install voila``), you can also open the notebook by clicking on the voila button in the top bar. This will hide the code blocks and make the plots better visible.\n",
     "\n",
     "The algorithm follows the document `\"RICHTLINIE NICHTLINEAR / Rechnerischer Festigkeitsnachweis unter expliziter Erfassung nichtlinearen Werkstoffverformungsverhaltens / Für Bauteile aus Stahl, Stahlguss und Aluminiumknetlegierungen / 1.Auflage, 2019\"`. If you want to learn more about how the algorithm works, have a look at the notebook [fkm_nonlinear_full](fkm_nonlinear_full.ipynb)."
