--- a/demos/fkm_nonlinear/fkm_nonlinear_full.ipynb
+++ b/demos/fkm_nonlinear/fkm_nonlinear_full.ipynb
@@ -5,7 +5,7 @@
    "id": "39ff11e6",
    "metadata": {},
    "source": [
-    "# FKM Nonlinear example\n",
+    "# FKM Nonlinear - full algorithm step-through\n",
     "The algorithm follows the document \"RICHTLINIE NICHTLINEAR / Rechnerischer Festigkeitsnachweis unter expliziter Erfassung nichtlinearen Werkstoffverformungsverhaltens / Für Bauteile aus Stahl, Stahlguss und Aluminiumknetlegierungen / 1.Auflage, 2019\"\n",
     "\n",
     "The used values are according to \"Akademisches Beispiel\", chapter 2.7.1.\n",
@@ -719,7 +719,7 @@
    "id": "e6ac3526",
    "metadata": {},
    "source": [
-    "# Assessment with $P_{RAJ}$"
+    "## Assessment with $P_{RAJ}$"
    ]
   },
   {
@@ -830,7 +830,7 @@
    "id": "aaa5d042",
    "metadata": {},
    "source": [
-    "# Debug crack opening strain of hystereses"
+    "## Debug crack opening strain of hystereses"
    ]
   },
   {
