handle arguments of interpolated_stress_strain_data
Signed-off-by: Benjamin Maier <benjamin.maier2@de.bosch.com>

--- a/demos/fkm_nonlinear/fkm_nonlinear.ipynb
+++ b/demos/fkm_nonlinear/fkm_nonlinear.ipynb
@@ -397,7 +397,7 @@
     "\n",
     "# plot resulting stress-strain curve\n",
     "sampling_parameter = 50    # choose larger for smoother plot\n",
-    "plotting_data = detector.interpolated_stress_strain_data(sampling_parameter)\n",
+    "plotting_data = detector.interpolated_stress_strain_data(n_points_per_branch=sampling_parameter)\n",
     "\n",
     "strain_values_primary = plotting_data[\"strain_values_primary\"]\n",
     "stress_values_primary = plotting_data[\"stress_values_primary\"]\n",
@@ -407,7 +407,7 @@
     "hysteresis_index_secondary = plotting_data[\"hysteresis_index_secondary\"]\n",
     "\n",
     "sampling_parameter = 50    # choose larger for smoother plot\n",
-    "plotting_data_1st = detector_1st.interpolated_stress_strain_data(sampling_parameter)\n",
+    "plotting_data_1st = detector_1st.interpolated_stress_strain_data(n_points_per_branch=sampling_parameter)\n",
     "\n",
     "strain_values_primary_1st = plotting_data_1st[\"strain_values_primary\"]\n",
     "stress_values_primary_1st = plotting_data_1st[\"stress_values_primary\"]\n",
@@ -441,7 +441,7 @@
     "\n",
     "# plot resulting stress-strain curve\n",
     "sampling_parameter = 50    # choose larger for smoother plot\n",
-    "plotting_data = detector.interpolated_stress_strain_data(sampling_parameter)\n",
+    "plotting_data = detector.interpolated_stress_strain_data(n_points_per_branch=sampling_parameter)\n",
     "\n",
     "strain_values_primary = plotting_data[\"strain_values_primary\"]\n",
     "stress_values_primary = plotting_data[\"stress_values_primary\"]\n",
@@ -451,7 +451,7 @@
     "hysteresis_index_secondary = plotting_data[\"hysteresis_index_secondary\"]\n",
     "\n",
     "sampling_parameter = 50    # choose larger for smoother plot\n",
-    "plotting_data_1st = detector_1st.interpolated_stress_strain_data(sampling_parameter)\n",
+    "plotting_data_1st = detector_1st.interpolated_stress_strain_data(n_points_per_branch=sampling_parameter)\n",
     "\n",
     "strain_values_primary_1st = plotting_data_1st[\"strain_values_primary\"]\n",
     "stress_values_primary_1st = plotting_data_1st[\"stress_values_primary\"]\n",
