--- a/demos/fkm_nonlinear/fkm_nonlinear_full.ipynb
+++ b/demos/fkm_nonlinear/fkm_nonlinear_full.ipynb
@@ -589,7 +589,7 @@
    "source": [
     "# plot resulting stress-strain curve\n",
     "sampling_parameter = 50    # choose larger for smoother plot\n",
-    "plotting_data = detector_1st.interpolated_stress_strain_data(sampling_parameter)\n",
+    "plotting_data = detector_1st.interpolated_stress_strain_data(n_points_per_branch=sampling_parameter)\n",
     "\n",
     "strain_values_primary = plotting_data[\"strain_values_primary\"]\n",
     "stress_values_primary = plotting_data[\"stress_values_primary\"]\n",
@@ -842,7 +842,7 @@
    "source": [
     "# plot resulting stress-strain curve\n",
     "sampling_parameter = 50    # choose larger for smoother plot\n",
-    "plotting_data = detector.interpolated_stress_strain_data(sampling_parameter)\n",
+    "plotting_data = detector.interpolated_stress_strain_data(n_points_per_branch=sampling_parameter)\n",
     "\n",
     "strain_values_primary = plotting_data[\"strain_values_primary\"]\n",
     "stress_values_primary = plotting_data[\"stress_values_primary\"]\n",
@@ -912,7 +912,7 @@
     "# plot all hystereses\n",
     "# get all graph data\n",
     "sampling_parameter = 50    # choose larger for smoother plot\n",
-    "plotting_data = detector.interpolated_stress_strain_data(sampling_parameter, only_hystereses=False)\n",
+    "plotting_data = detector.interpolated_stress_strain_data(n_points_per_branch=sampling_parameter, only_hystereses=False)\n",
     "\n",
     "strain_values_primary = plotting_data[\"strain_values_primary\"]\n",
     "stress_values_primary = plotting_data[\"stress_values_primary\"]\n",
@@ -934,7 +934,7 @@
     "\n",
     "# get graph data of only hystereses\n",
     "sampling_parameter = 50    # choose larger for smoother plot\n",
-    "plotting_data = detector.interpolated_stress_strain_data(sampling_parameter, only_hystereses=True)\n",
+    "plotting_data = detector.interpolated_stress_strain_data(n_points_per_branch=sampling_parameter, only_hystereses=True)\n",
     "\n",
     "strain_values_primary = plotting_data[\"strain_values_primary\"]\n",
     "stress_values_primary = plotting_data[\"stress_values_primary\"]\n",
