change NFFT to nfft in Notebook
Signed-off-by: Daniel Kreuter <DanielChristopher.Kreuter@de.bosch.com>

--- a/demos/time_series_handling.ipynb
+++ b/demos/time_series_handling.ipynb
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts.psd_df(signal_df, NFFT = 512).plot(loglog=True, ylabel=\"PSD\", title=\"PSD of time series\")"
+    "ts.psd_df(signal_df, nfft = 512).plot(loglog=True, ylabel=\"PSD\", title=\"PSD of time series\")"
    ]
   },
   {
@@ -128,7 +128,7 @@
    "source": [
     "bandpass_df = ts.butter_bandpass(signal_df, f_min, f_max)\n",
     "\n",
-    "df_psd = ts.psd_df(bandpass_df, NFFT = 512)\n",
+    "df_psd = ts.psd_df(bandpass_df, nfft = 512)\n",
     "df_psd.plot(loglog=True, ylabel=\"PSD bandpassed\", title=\"PSD of filtered time series\")"
    ]
   },
