--- a/demos/fkm_nonlinear/fkm_nonlinear_full.ipynb
+++ b/demos/fkm_nonlinear/fkm_nonlinear_full.ipynb
@@ -151,7 +151,7 @@
    "id": "84138164",
    "metadata": {},
    "source": [
-    "### Estimate tensile strength $R_m$ from nominal value $R_{m,N}$"
+    "## Estimate tensile strength $R_m$ from nominal value $R_{m,N}$"
    ]
   },
   {
@@ -260,7 +260,7 @@
    "id": "0abbb656",
    "metadata": {},
    "source": [
-    "#### 2.5.5.1 Determine from experiments\n",
+    "### 2.5.5.1 Determine from experiments\n",
     "* Conduct strain-driven experiments with $R_\\varepsilon = -1$. Record values for $\\sigma_a, \\varepsilon_{a,\\text{ges}}$ and $N_\\text{Werkstoff}$.\n",
     "* Compute $P_{RAM}=\\sqrt{\\sigma_a\\cdot \\varepsilon_{a,\\text{ges}} \\cdot E}$ for every single experiment.\n",
     "* Use the maximum-likelihood method to infer the parameters $d_1, d_2, P_{RAM,Z,WS}$. For details, refer to the FKM nonlinear document, Sec. 2.5.5.1, p. 40."
@@ -271,7 +271,7 @@
    "id": "b20fc450",
    "metadata": {},
    "source": [
-    "#### 2.5.5.2 Estimate from formulas\n",
+    "### 2.5.5.2 Estimate from formulas\n",
     "Alternatively, estimate the material SN-curve from the ultimate tensile strength $R_m$."
    ]
   },
@@ -871,8 +871,6 @@
     "# plot resulting stress-strain curve\n",
     "sampling_parameter = 50    # choose larger for smoother plot\n",
     "plotting_data = detector.interpolated_stress_strain_data(n_points_per_branch=sampling_parameter)\n",
-    "\n",
-    "history = detector.history()\n",
     "    \n",
     "primary = plotting_data.loc[~plotting_data.secondary_branch]\n",
     "secondary = plotting_data.loc[plotting_data.secondary_branch]\n",
@@ -902,22 +900,18 @@
     "axes[1].set_ylabel(r\"$\\sigma$ [MPa]\")\n",
     "axes[1].set_title(\"Material response\")\n",
     "\n",
-    "n_hystereses = plotting_data.hyst_index.max()\n",
-    "\n",
-    "for hysteresis_index in range(n_hystereses+1):\n",
+    "for hysteresis_index, hysteresis in plotting_data.groupby(\"hyst_index\"):\n",
+    "    if hysteresis_index < 0:\n",
+    "        continue\n",
     "    fig, ax = plt.subplots(figsize=(12,6))\n",
-    "\n",
-    "    hysteresis = detector.interpolated_stress_strain_data(hysteresis_index=hysteresis_index, n_points_per_branch=sampling_parameter)\n",
     "\n",
     "    primary = hysteresis.loc[~hysteresis.secondary_branch]\n",
     "    secondary = hysteresis.loc[hysteresis.secondary_branch]\n",
     "    run_index = hysteresis.run_index.iloc[0]\n",
     "\n",
-    "    hyst_start_segment = history.xs(hysteresis_index, level=\"hyst_to\").index.get_level_values(\"load_segment\")[0]\n",
+    "    hyst_start_segment = history.query(f\"hyst_to == {hysteresis_index}\").index.get_level_values(\"load_segment\")[0]\n",
     "    history_plot = plotting_data[plotting_data.load_segment < hyst_start_segment]\n",
-    "    np.set_printoptions(formatter={\"float\": lambda x: \"%.2e\" % x})\n",
-    "    history_plot.groupby(\"load_segment\")\n",
-    "    \n",
+    "        \n",
     "    ax.set_title(f\"Hysteresis {hysteresis_index}, Run {run_index}\")\n",
     "    for _, segment in history_plot.groupby(\"load_segment\"):\n",
     "        ax.plot(segment.strain, segment.stress, \"gray\", lw=1)\n",
@@ -942,19 +936,16 @@
     "# get all graph data\n",
     "sampling_parameter = 50    # choose larger for smoother plot\n",
     "plotting_data = detector.interpolated_stress_strain_data(n_points_per_branch=sampling_parameter)\n",
-    "plotting_data = plotting_data[plotting_data[\"hyst_index\"] >= 0]\n",
     "\n",
-    "primary = plotting_data.loc[plotting_data.primary]\n",
-    "secondary = plotting_data.loc[plotting_data.secondary]\n",
+    "primary = plotting_data.loc[~plotting_data.secondary_branch]\n",
+    "secondary = plotting_data.loc[plotting_data.secondary_branch]\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(12,6))\n",
     "\n",
-    "for _, run in primary.groupby(\"run_index\"):\n",
-    "    for _, prim in run.groupby(\"load_step\"):\n",
-    "        ax.plot(prim.strain, prim.stress, \"b-\", lw=2)\n",
-    "for _, run in secondary.groupby(\"run_index\"):    \n",
-    "    for _, sec in run.groupby(\"load_step\"):\n",
-    "        ax.plot(sec.strain, sec.stress, \"b--\", lw=1)\n",
+    "for _, prim in primary.groupby(\"load_segment\"):\n",
+    "    ax.plot(prim.strain, prim.stress, \"b-\", lw=2)\n",
+    "for _, sec in secondary.groupby(\"load_segment\"):\n",
+    "    ax.plot(sec.strain, sec.stress, \"b--\", lw=1)\n",
     "\n",
     "#ax.plot(primary.strain, primary.stress, \"b-\", lw=2)\n",
     "#ax.plot(secondary.strain, secondary.stress, \"b--\", lw=1)\n",
@@ -969,26 +960,22 @@
     "# get graph data of only hystereses\n",
     "sampling_parameter = 50    # choose larger for smoother plot\n",
     "\n",
-    "# plot only hystereses\n",
-    "previous_branches = []\n",
-    "\n",
-    "n_hystereses = plotting_data.hyst_index.max() + 1\n",
-    "\n",
-    "for hysteresis_index in range(n_hystereses):\n",
-    "\n",
+    "for hysteresis_index, hysteresis in plotting_data.query(\"hyst_index >= 0\").groupby(\"hyst_index\"):\n",
     "    fig, ax = plt.subplots(figsize=(12,6))\n",
     "    \n",
-    "    subset = detector.interpolated_stress_strain_data(hysteresis_index=hysteresis_index, n_points_per_branch=sampling_parameter)\n",
-    "    primary = subset.loc[subset.primary == True]\n",
-    "    secondary = subset.loc[subset.secondary]\n",
-    "    run_index = subset.run_index.iloc[0]   \n",
+    "    primary = hysteresis.loc[~hysteresis.secondary_branch]\n",
+    "    secondary = hysteresis.loc[hysteresis.secondary_branch]\n",
+    "    run_index = hysteresis.run_index.iloc[0]   \n",
     "\n",
-    "    ax.set_title(f\"Hysteresis {hysteresis_index}, Run {run_index}\")\n",
-    "    for stress_previous, strain_previous in previous_branches:\n",
-    "        ax.plot(strain_previous, stress_previous, \"gray\", lw=1)\n",
-    "    for _, prim in primary.groupby(\"load_step\"):\n",
-    "        ax.plot(prim.strain, prim.stress, \"b-\", lw=2)    \n",
+    "    hyst_start_segment = history.query(f\"hyst_to == {hysteresis_index}\").index.get_level_values(\"load_segment\")[0]\n",
+    "    history_plot = plotting_data[plotting_data.load_segment < hyst_start_segment]\n",
     "        \n",
+    "    \n",
+    "    ax.set_title(f\"Hysteresis {hysteresis_index}, Run {run_index}\")\n",
+    "    for _, segment in history_plot.groupby(\"load_segment\"):\n",
+    "        ax.plot(segment.strain, segment.stress, \"gray\", lw=1)        \n",
+    "    for _, prim in primary.groupby(\"load_segment\"):\n",
+    "        ax.plot(prim.strain, prim.stress, \"b-\", lw=2)    \n",
     "    ax.plot(secondary.strain, secondary.stress, \"b--\", lw=1)\n",
     "    \n",
     "    # plot crack opening points\n",
@@ -1013,12 +1000,6 @@
     "    epsilon_max_alt_SP = collective.iloc[hysteresis_index, collective.columns.get_loc(\"epsilon_max_alt_SP\")]\n",
     "    epsilon_min_LF = collective.iloc[hysteresis_index, collective.columns.get_loc(\"epsilon_min_LF\")]\n",
     "    epsilon_max_LF = collective.iloc[hysteresis_index, collective.columns.get_loc(\"epsilon_max_LF\")]\n",
-    "    \n",
-    "    \n",
-    "    # add the new hysteresis to every next plot\n",
-    "    \n",
-    "    # add the new hysteresis to every next plot\n",
-    "    previous_branches.append((subset.stress, subset.strain))\n",
     "    \n",
     "    ax.plot([epsilon_min_alt_SP,epsilon_min_alt_SP], [S_min*0.9,S_max*1.1], \":\", label=\"ε_min,alt,SP\")\n",
     "    ax.plot([epsilon_max_alt_SP,epsilon_max_alt_SP], [S_min*0.9,S_max*1.1], \"-\", label=\"ε_max,alt,SP\")\n",
