Adjust jupyter notebook
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/fkm_nonlinear/fkm_nonlinear_full.ipynb
+++ b/demos/fkm_nonlinear/fkm_nonlinear_full.ipynb
@@ -215,7 +215,7 @@
     "plt.rcParams.update({'font.size': 22})\n",
     "plt.plot(range(len(scaled_load_sequence)), load_sequence, \"o-\", c=\"g\", lw=3)\n",
     "plt.grid()\n",
-    "plt.ylabel(\"$\\sigma_V$ [MPa]\")"
+    "plt.ylabel(r\"$\\sigma_V$ [MPa]\")"
    ]
   },
   {
@@ -559,18 +559,13 @@
     "load_sequence_list = scaled_load_sequence\n",
     "print(load_sequence_list)\n",
     "\n",
-    "# wrap the notch approximation law by a binning class, which precomputes the values\n",
-    "maximum_absolute_load = max(np.abs(load_sequence_list))\n",
-    "print(f\"maximum_absolute_load: {maximum_absolute_load}\")\n",
-    "extended_neuber_binned = pylife.materiallaws.notch_approximation_law.Binned(\n",
-    "    extended_neuber, maximum_absolute_load, 100)\n",
-    "\n",
     "# create recorder object\n",
     "recorder = pylife.stress.rainflow.recorders.FKMNonlinearRecorder()\n",
     "\n",
     "# create detector object\n",
     "detector = pylife.stress.rainflow.fkm_nonlinear.FKMNonlinearDetector(\n",
-    "    recorder=recorder, notch_approximation_law=extended_neuber_binned)\n",
+    "    recorder=recorder, notch_approximation_law=extended_neuber\n",
+    ")\n",
     "\n",
     "# perform HCM algorithm, first run\n",
     "detector.process(load_sequence_list, flush=False)\n",
@@ -759,18 +754,13 @@
     "load_sequence_list = scaled_load_sequence\n",
     "print(load_sequence_list)\n",
     "\n",
-    "# wrap the notch approximation law by a binning class, which precomputes the values\n",
-    "maximum_absolute_load = max(np.abs(load_sequence_list))\n",
-    "print(f\"maximum_absolute_load: {maximum_absolute_load}\")\n",
-    "seeger_beste_binned = pylife.materiallaws.notch_approximation_law.Binned(\n",
-    "    seeger_beste, maximum_absolute_load, 100)\n",
-    "\n",
     "# create recorder object\n",
     "recorder = pylife.stress.rainflow.recorders.FKMNonlinearRecorder()\n",
     "\n",
     "# create detector object\n",
     "detector = pylife.stress.rainflow.fkm_nonlinear.FKMNonlinearDetector(\n",
-    "    recorder=recorder, notch_approximation_law=seeger_beste_binned)\n",
+    "    recorder=recorder, notch_approximation_law=seeger_beste\n",
+    ")\n",
     "\n",
     "# perform HCM algorithm, first run\n",
     "detector.process(load_sequence_list, flush=False)\n",
